; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_wasm.c_load_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_wasm.c_load_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UT64_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32*, i32, i32*)* @load_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_buffer(i32* %0, i8** %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8** %1, i8*** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %5
  %15 = load i32*, i32** %9, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32*, i32** %9, align 8
  %19 = call i64 @r_buf_size(i32* %18)
  %20 = load i64, i64* @UT64_MAX, align 8
  %21 = icmp ne i64 %19, %20
  br label %22

22:                                               ; preds = %17, %14, %5
  %23 = phi i1 [ false, %14 ], [ false, %5 ], [ %21, %17 ]
  %24 = zext i1 %23 to i32
  %25 = call i32 @r_return_val_if_fail(i32 %24, i32* null)
  %26 = load i32*, i32** %9, align 8
  %27 = call i64 @check_buffer(i32* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %22
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = call i8* @r_bin_wasm_init(i32* %30, i32* %31)
  %33 = load i8**, i8*** %8, align 8
  store i8* %32, i8** %33, align 8
  store i32 1, i32* %6, align 4
  br label %35

34:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  br label %35

35:                                               ; preds = %34, %29
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @r_return_val_if_fail(i32, i32*) #1

declare dso_local i64 @r_buf_size(i32*) #1

declare dso_local i64 @check_buffer(i32*) #1

declare dso_local i8* @r_bin_wasm_init(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
